# daprs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  agent.toml  agent.toml.example  package-lock.json  server.toml  server.toml.example  tgbot.toml  tgbot.toml.example
agent/: Cargo.toml
agent/src/: api.rs  cli.rs  cmd.rs  config.rs  main.rs  mw.rs  utils.rs  wb.rs
agent/src/wb/: bird.rs  mod.rs  wg.rs
migrations/: 20260625093426_full.down.sql  20260625093426_full.up.sql
server/: Cargo.toml
server/src/: agent_client.rs  api.rs  audit.rs  cli.rs  config.rs  main.rs
server/src/api/: handler.rs  mod.rs  oauth.rs
server/src/db/: audit.rs  mod.rs  oauth_states.rs  peer_cache.rs  peering_requests.rs  sessions.rs  users.rs
shared/: Cargo.toml
shared/src/: lib.rs  rate_limiter.rs  validation.rs
tgbot/: Cargo.toml
tgbot/src/: agent.rs  cache.rs  cmd.rs  config.rs  error.rs  flow.rs  main.rs  message.rs
tgbot/src/commands/: dig.rs  flaps.rs  mod.rs  path.rs  peer.rs  ping.rs  route.rs  start.rs  tcping.rs  trace.rs
webui/: Cargo.toml  compose.html  index.html  nodes.html  package-lock.json  package.json  peers.html  session.html  signin.html  tsconfig.app.json  vite.config.ts  vite.config.ts.example
webui/src/: App.vue  env.d.ts  main.ts  router.ts  style.css  types.ts
webui/src/api/: index.ts
webui/src/components/: Navbar.vue
webui/src/entries/: compose.ts  index.ts  nodes.ts  peers.ts  session.ts  signin.ts
webui/src/lib/: api.ts  page.ts
webui/src/stores/: auth.ts
webui/src/views/: Admin.vue  AdminModify.vue  ComposePage.vue  Dashboard.vue  Home.vue  Login.vue  NodesPage.vue  PeerInfo.vue  Peering.vue  PeersPage.vue  SessionPage.vue  SignInPage.vue  StageIndexPage.vue  Tools.vue
