[workspace]
members = [ "agent", "server", "shared" ]
default-members = [ "server" ]
resolver = "2"

[profile.release]
opt-level = 3       # Enable all optimizations
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
