[workspace]
members = [ "agent", "server", "shared" , "tgbot", ]
default-members = [ "server" ]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
axum = {version = "0.8.9", features = ["tokio", "tracing"] }
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.52.3"
toml = "1.1.2"
tower-http = "0.6.10"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4"] }
shared = { path = "shared" }

[profile.release]
opt-level = 'z'     # Enable all optimizations
lto = 'fat'         # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
