[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["tokio", "tracing"] }
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["net", "rt-multi-thread", "process", "time"] }
toml = "1.1.2+spec-1.1.0"
tower-http = { version = "0.6.10", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
shared = { path = "../shared" }


[[bin]]
name = "agent"
path = "src/main.rs"
