[package]
name = "agent"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread", "process", "time"] }
toml.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
shared.workspace = true


[[bin]]
name = "agent"
path = "src/main.rs"
