[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["tokio", "tracing"] }
clap = { version = "4.6.1", features = ["derive"] }
oauth2 = "5.0.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
sled = "0.34.7"
thiserror = "2.0.12"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
shared = { path = "../shared" }


[[bin]]
name = "server"
path = "src/main.rs"
