[package]
name = "server"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["tokio", "tracing"] }
clap = { version = "4.6.1", features = ["derive"] }
oauth2 = { version = "5.0.0", default-features = false, features = ["rustls-tls"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"
tower-http = { version = "0.6.10", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4"] }
shared = { path = "../shared" }


[[bin]]
name = "server"
path = "src/main.rs"
