[package]
name = "server"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
oauth2 = { version = "5.0.0", default-features = false, features = ["rustls-tls"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml.workspace = true
tower-http = { workspace = true, features = ["trace", "cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
shared.workspace = true


[[bin]]
name = "server"
path = "src/main.rs"
