[package]
name = "tgbot"
version = "0.2.2"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures = "0.3"
headless_chrome = "1.0.22"
# headless_chrome = { version = "1.0.22", features = ["fetch"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
serde.workspace = true
shared.workspace = true
teloxide = { version = "0.17.0", default-features = false, features = ["ctrlc_handler", "macros", "rustls"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
